--- a/features/reports/components/IncidentTable/IncidentsTable.module.scss
+++ b/features/reports/components/IncidentTable/IncidentsTable.module.scss
@@ -1,4 +1,18 @@
+.container {
+  width: 100%;
+}
 
+.tableWrapper {
+  width: 100%;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+}
+
+.table {
+  width: 100%;
+  min-width: 900px; 
+  border-collapse: collapse;
+}
 
 .card {
   background: #fff;
